<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvDialogTitle"
    />


    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_message"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/tvDialogMessage"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:orientation="horizontal"
       android:layout_marginTop="16dp"

    >

       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.5"
           android:text="@string/yes"
           android:backgroundTint="@color/colorPrimary"
           android:id="@+id/btnYes"
           android:layout_marginRight="10dp"
           />


       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.5"
           android:text="@string/no"
           android:backgroundTint="@color/colorPrimary"
           android:id="@+id/btnNo"
           android:layout_marginLeft="10dp"
           />

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>